--- a/trade_options/src/css/main.scss
+++ b/trade_options/src/css/main.scss
@@ -16,8 +16,8 @@ html {
 
 
 body{
-	background: #EEE;
-	color: $primary-color;
+	background: $primary-color;
+	color: $fourth-color;
 }
 
 
@@ -40,7 +40,8 @@ body{
 }
 
 .ticker-names{
-	width:70%;
+	width:100%;
+	font-size: 0.8em;
 }
 
 .ticker-names ul{
@@ -50,6 +51,9 @@ body{
 
 .ticker-names li{
 	list-style: none;
+	border-bottom: 3px solid $third-color;
+	margin-bottom: 20px;
+	cursor: pointer;
 }
 
 .ticker-names span{
